--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/foodapp
 spring.datasource.username=govind
 spring.datasource.password=govind
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.show_sql=true
