worked on spring security, jwt based authentication and authorization

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/foodapp
 spring.datasource.username=govind
 spring.datasource.password=govind
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.show_sql=true
@@ -21,3 +21,6 @@ api.prefix=/api
 
 
 
+# jwt
+auth.token.expirationInMillis=3600000
+auth.token.jwtSecret=XdC-5wXGCc5Wo4xp2fL-ke0bUzDZ2qTM9f3idVzNRqk
